# Jaeger

./: .cz.toml  .gitignore  .readthedocs.yaml  =  =4.64  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RESEARCH_IDEAS.md  callbacks.py  cmodel.py  confreader.py  dataloader.py  entities.json  inference.py  install.sh  mempalace.yaml  nnlib.py  nnlibv2.py  pyproject.toml  setup.py  train.py  utils.py  vitra.py
.agents/: mempalace-setup.md
.agents/skills/jaeger-release-workflow/: SKILL.md
.github/: renovate.json
.github/scripts/: bump-version.sh  update-meta-deps.py
.github/workflows/: bioconda-update.yml  bioconda-update.yml.disabled  publish-to-pypi.yaml  release.yml  tests.yml
ERZ773086_FASTA.fasta/: ERZ773086_FASTA.fasta_default_jaeger.tsv  ERZ773086_FASTA.fasta_default_phages_jaeger.tsv
data/: val_data_1000.txt
data/test_model/: jaeger_1.5M.yaml
data/test_model/jaeger_1.5M_graph/: fingerprint.pb  saved_model.pb
data/test_model/jaeger_graph/: fingerprint.pb  saved_model.pb
docs/: Makefile  requirements.txt
docs/_source/: conf.py  index.md  installation.md  optimizations.md  releasing.md  train.md  usage.md
docs/_source/_static/: annotate.md  conf.py  index.md  installation.md  train.md  usage.md
jaegeraa/: __init__.py  lib.py  postprocessing.py  preprocessing.py  utils.py
jaegeraa/data/: config.json
jaegeraa/nnlib/: cmodel.py  layers.py
mutiscale_receptive_field_experiments/: .gitignore  multiscale_rf_axial_attention.yaml  multiscale_rf_baseline.yaml  multiscale_rf_bilstm.yaml  multiscale_rf_mlp.yaml  plot_training_history.py  run_sweep.sh
receptive_field_experiments/: generate_multiscale_config.py  multiscale_rf.yaml  single_rf_127_baseline.yaml
recipes/: README.md
recipes/jaeger-bio/: meta.yaml
scripts/: balance_and_merge_eukarya.py  calculate_metrics_realworld.py  class_distribution.py  convert_legacy_classifier_checkpoint.py  convert_preprocessed_data.py  create_variable_length_config.py  eval_clean.py  eval_length_generalization.py  eval_length_generalization_fast.py  eval_simple.py  evaluate_saved_model.py  filter_csv_by_ns.py  generate_big_euk_fragments.py  merge_npz_for_variable_length.py  plot_benchmark_results.py  prepare_length_csvs.py  run_benchmark_evaluation.py  train_and_eval_length_generalization.py  tune_reliability_threshold.py
singularity/: jaeger_dev_singularity.def  jaeger_singularity.def
slurm/: axial_500bp.slurm  baseline_500bp.slurm  convert_numpy.slurm  convert_tfrecords.slurm  convert_tfrecords_cpu.slurm  convert_tfrecords_fast.slurm  crossframe_500bp.slurm  pytorch_ddp_500bp.slurm  submit_axial_when_ready.slurm  test_container.slurm
slurm/scripts/: eval_benchmark.slurm  full_jaeger_pipeline.sh  full_jaeger_pipeline_brain.slurm  full_jaeger_pipeline_zeus.slurm  merge_variable_length.slurm  multiscale_rf_baseline_zeus.slurm  multiscale_rf_zeus.slurm  opt_variable_length_nuc.slurm  opt_variable_length_trans.slurm  prep_variable_length_csvs.slurm  train_variable_length_nuc.slurm  train_variable_length_trans.slurm
src/: cli.py
src/commands/: predict.py  test.py  train.py  utils.py
src/data/: test_contigs.fasta
src/jaeger/: __init__.py  cli.py  lib.py
src/jaeger/commands/: downloads.py  (+10 more)
src/jaegeraa/: __init__.py  lib.py  postprocessing.py  preprocessing.py  utils.py
src/postprocess/: prophages.py
src/preprocess/: shuffle_dna.py
src/utils/: gpu.py  seq.py  termini.py  test.py
test/: human_gut.fasta
test_cli/: README.md  run_cli_tests.sh
tests/: conftest.py  test_frame_shuffle.py
tests/integration/: test_builder_nmd_merge.py  test_builder_projection.py  test_builder_short_fragment_config.py  test_dvf_training.py  test_inference_pipeline.py  test_optimize_data_cli.py  test_pytorch_benchmark_smoke.py  test_pytorch_parity.py
tests/pytest/: test_builder_parallel_branches.py  test_cli.py  test_convergence_resume.py  test_health.py  test_hyena.py  test_inference.py  test_pyproject.py
tests/smoke/: convert_test.py  data_format_test.py  data_test.py  hyena_train_test.py  infer_test.py  layers.test.py  layers_test.py  loss_test.py  train_test.py
tests/test_suite/: test_cli.py  test_pyproject.py
tests/unit/: test_binary_f1.py  test_calculate_metrics_realworld.py  test_checkpoint_resume.py  test_cli.py  test_commands_predict.py  test_commands_train.py  test_commands_utils.py  test_create_variable_length_config.py  test_crop.py  test_crop_mode.py  test_data_loaders.py  test_data_tfrecord.py  test_dataops_convert.py  test_dataops_dataset.py  test_dataops_ood.py  test_dataops_reliability_generator.py  test_dataops_split.py  test_evaluate_saved_model.py  test_gradient_accumulation.py  test_inference_crop.py  test_lr_schedule.py  test_mask_mode.py  test_masked_bilstm.py  test_masked_pooling.py  test_merge_npz_for_variable_length.py  test_metrics.py  test_nnlib_builder.py  test_nnlib_conversion.py  test_nnlib_inference.py  test_nnlib_metrics.py  test_nnlib_v2_layers.py  test_nnlib_v2_layers_short_fragment.py  test_nnlib_v2_losses.py  test_nnlib_v2_nmd.py  test_ood_signal_layer.py  test_optimize_data_crop.py  test_plot_benchmark_results.py  test_postprocess_collect.py  test_postprocess_helpers.py  test_predict_crop_warning.py  (+25 more)
train_config/: hyena_test.yaml  nn_config.yaml  nn_config_1500bp_nmd_merge_6_class_brain.yaml  nn_config_1500bp_nmd_merge_6_class_zeus.yaml  nn_config_300-2000bp_multiscale.yaml  nn_config_500bp_axial.yaml  nn_config_500bp_axial_zeus.yaml  nn_config_500bp_baseline.yaml  nn_config_500bp_baseline_zeus.yaml  nn_config_500bp_crossframe.yaml  nn_config_500bp_crossframe_zeus.yaml  nn_config_500bp_dvf.yaml  nn_config_500bp_nmd_merge.yaml  nn_config_500bp_nucleotide.yaml  nn_config_500bp_translated.yaml  nn_config_axial_attention.yaml  nn_config_baseline.yaml  nn_config_cross_frame.yaml  nn_config_shuffle_frames.yaml  nn_config_strand_test.yaml  nn_config_strand_test_shuffle.yaml
(+142 files in other folders)
