[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
python_files = ["test_*.py", "*_test.py"]

[tool.pdm]
package-dir = "src"

[tool.pdm.build]
includes = ["src/jaeger/**/*.py", "src/jaeger/**/*.json", "src/jaeger/**/*.h5", "src/jaeger/**/*.npy", "src/jaeger/**/*.pkl", "src/jaeger/**/*.fasta", "src/jaeger/**/*.env", "src/jaeger/**/jaeger_fragment_graph/**", "src/jaeger/**/jaeger_fragment_graph/**/*"]

[project]
name = "jaeger-bio"
version = "1.27.1"
description = "A quick and precise pipeline for detecting phages in sequence assemblies."
readme = "README.md"
authors = [
    {name = "Yasas Wijesekara", email = "yasas.wijesekara@uni-greifswald.de"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "h5py >= 3.0",
    "joblib >= 1.0",
    "keras >= 3.12.0",
    "kneed >= 0.8.5",
    "matplotlib >= 3.7",
    "numpy >= 1.24",
    "pandas >= 2.2.3",
    "polars >= 1.2.6",
    "parasail == 1.3.4",
    "psutil >=7.0.0",
    "click >=8.1",
    "pycirclize",
    "requests >= 2.0",
    "rich >= 13.0",
    "scipy >= 1.10",
    "pyfastx >= 2",
    "ruptures >= 1.1.9",
    "scikit-learn >= 1.6.0",
    "seaborn >= 0.13.0",
    "pyyaml >= 6.0.2",
    "jinja2 >= 3.1",
    "pydustmasker >= 1.0.3"
]
license = {text = "MIT"}

[project.scripts]
jaeger = "jaeger.cli:main"

[project.urls]
Homepage = "https://github.com/Yasas1994/Jaeger"

[project.optional-dependencies]
gpu = [
    "torch >=2.0, <3.0",
]
cpu = [
    "torch >=2.0, <3.0",
]
darwin-arm = [
    "torch >=2.0, <3.0",
]
legacy = [
    "tensorflow >=2.21, <2.22",
]
test = [
    "pytest >=8.0",
    "pytest-mock >=3.14",
    "numba>=0.59",
]
onnx = [
    "onnxruntime-gpu >=1.26",
    "tf2onnx >=1.17",
    "sympy >=1.13",
    "onnx >=1.16",
]
taxonomy = [
    "taxopy",
    "faiss-cpu",
]
numba = [
    "numba>=0.59",
]
